# MachineLearning

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindOctave.cmake
Notes/: StepLength.tex
Scripts/: GradientDescent.m  GradientDescentExample.m  IncrementalGradientDescent.m  LinearRegression.m  LinearRegressionExample.m  NormalEquations.m
Source/: CMakeLists.txt  HelloWorld.cc  MLDataPoint.hh  MLMatrix.hh  MLOctaveVector.hh  MLSimpleMatrix.hh  MLSimpleVector.hh  MLTypePromotion.hh  MLVector.hh  TestDataPoint.cc  TestLinearAlgebra.cc  TestOctave.cc
